# all_combinations

./: Cargo.toml  README.md
src/: lib.rs
